# tauri-chat-sample

./: README.md
client/: README.md  buf.gen.yaml  package-lock.json  package.json
client/services/: chat_connect.ts  chat_pb.ts  greeting_connect.ts  greeting_pb.ts
client/src/: App.vue
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src/components/: Greet.vue
proto/: chat.proto
server/: Cargo.toml  README.md  build.rs
server/src/: main.rs
